codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_turn_clears_visible_running_hook.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before completion:\\n{before_completion}after completion:\\n{}\",\nactive_hook_blob(&chat))"
---
before completion:
● Running PostToolUse hook
after completion:
<empty>
