codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__esc_interrupt_goal_paused_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"· Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask DSX to do anything                                                      "
"                                                                                "
"  deepseek-v4-pro default · /tmp/project            Goal paused (/goal resume)  "
